--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "plugins": ["prettier"],
+    "rules": {
+        "no-undef": "off",
+        "prettier/prettier": ["error", { "tabWidth": 4 }]
+    },
+    "settings": {
+        "react": {
+            "version": "detect" // Automatically detect the react version
+        }
+    }
 }
