--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "antd": "^5.21.3",
         "concurrently": "^9.0.1",
         "koa": "^2.15.3",
         "koa-bodyparser": "^4.4.1",
         "koa-router": "^13.0.1",
         "next": "14.2.15",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "sass": "^1.79.5"
     },
     "devDependencies": {
         "@types/node": "^20",
